package lapr.project.model.store;

import lapr.project.model.CargoManifest;

import java.util.ArrayList;
import java.util.List;

public class CargoManifestStore {

    private List<CargoManifest> cargoManifestList;

    public CargoManifestStore(){
        cargoManifestList = new ArrayList<>();
    }



}
