@startuml
'https://plantuml.com/sequence-diagram

class RatioOfCargoManifestUI{}

class RatioOfCargoManifestController{
-getTheRatioOfCargoManifest(id)
}

class Company{
-getCargoManifestStore()
}

class CargoManifestStore{
-getRatioOfACargoManifestById(id)
}

class CargoManifest{
-getRatio()
}

RatioOfCargoManifestUI ..> RatioOfCargoManifestController

RatioOfCargoManifestController ..> Company

Company -> CargoManifestStore : uses

CargoManifestStore --* CargoManifest
@enduml